--- a/assets/css/dark_theme.css
+++ b/assets/css/dark_theme.css
@@ -7,11 +7,26 @@ body {
   font-family: "Calibri";
   margin: 0;
   cursor: default;
-  -moz-user-select: none; /* Firefox */
-  -ms-user-select: none; /* Internet Explorer */
-  -khtml-user-select: none; /* KHTML browsers (e.g. Konqueror) */
-  -webkit-user-select: none; /* Chrome, Safari, and Opera */
-  -webkit-touch-callout: none; /* Disable Android and iOS callouts*/
+  -moz-user-select: none;
+  /* Firefox */
+  -ms-user-select: none;
+  /* Internet Explorer */
+  -khtml-user-select: none;
+  /* KHTML browsers (e.g. Konqueror) */
+  -webkit-user-select: none;
+  /* Chrome, Safari, and Opera */
+  -webkit-touch-callout: none;
+  /* Disable Android and iOS callouts*/
+}
+
+.titlebar, .titlebar>* {
+  font-family: Roboto, sans-serif;
+  font-size: 12px;
+  color: rgb(184, 184, 184);
+}
+
+.menu-item-icon {
+  display: none;
 }
 
 ::placeholder {
@@ -60,7 +75,7 @@ body {
   width: 100%;
   height: 99vh;
   display: grid;
-  grid-template-columns: 350px 35px 1fr;
+  grid-template-columns: 300px 35px 1fr;
 }
 
 .Control {
@@ -108,6 +123,30 @@ body {
   background-color: rgb(85, 85, 85);
 }
 
+.dropdown_container {
+  display: none;
+  z-index: 999;
+  position: absolute;
+  width: calc(100% - 42px);
+  max-height: 300px;
+  overflow-y: auto;
+  background-color: rgb(37, 37, 38);
+  box-shadow:  0 4px 8px 0 rgba(0, 0, 0, 0.418), 0 6px 10px 0 rgba(0, 0, 0, 0.39);
+  padding: 5px;
+}
+
+.dropdown_container_item {
+  white-space: nowrap;
+  overflow-x: hidden;
+  color: rgb(138, 138, 138);
+  
+}
+
+.dropdown_container_item:hover {
+  background: rgb(122, 122, 122);
+  color: rgb(218, 218, 218); 
+}
+
 .Test_ID {
   position: relative;
   display: grid;
@@ -125,6 +164,7 @@ body {
   margin-top: 3px;
   overflow: hidden;
 }
+
 .List_TestID:hover {
   overflow: auto;
 }
@@ -132,11 +172,16 @@ body {
 .display {
   display: grid;
   grid-template-rows: 70% 5px 1fr;
-  -moz-user-select: text; /* Firefox */
-  -ms-user-select: text; /* Internet Explorer */
-  -khtml-user-select: text; /* KHTML browsers (e.g. Konqueror) */
-  -webkit-user-select: text; /* Chrome, Safari, and Opera */
-  -webkit-touch-callout: text; /* Disable Android and iOS callouts*/
+  -moz-user-select: text;
+  /* Firefox */
+  -ms-user-select: text;
+  /* Internet Explorer */
+  -khtml-user-select: text;
+  /* KHTML browsers (e.g. Konqueror) */
+  -webkit-user-select: text;
+  /* Chrome, Safari, and Opera */
+  -webkit-touch-callout: text;
+  /* Disable Android and iOS callouts*/
 }
 
 .preview_contain {
@@ -151,6 +196,7 @@ body {
   display: grid;
   grid-template-rows: 1fr;
 }
+
 .preview:hover {
   overflow: auto;
 }
@@ -170,6 +216,7 @@ body {
   border-right: 1px solid #686868a2;
   margin-left: 30px;
 }
+
 .column_splitter:hover {
   cursor: col-resize;
 }
@@ -178,6 +225,7 @@ body {
   background-color: rgba(17, 17, 17);
   border-top: 1px solid #686868a2;
 }
+
 .row_splitter:hover {
   cursor: row-resize;
 }
@@ -189,6 +237,7 @@ body {
   color: rgb(124, 124, 124);
   text-align: left;
 }
+
 /* Button */
 
 .drd_btn {
@@ -247,6 +296,7 @@ body {
 }
 
 /*Toggle Button*/
+
 .togglebutton_type1 {
   height: 25px;
   width: 71px;
@@ -274,16 +324,19 @@ body {
 }
 
 /* On mouse-over, add a grey background color */
+
 .togglebutton_type1:hover {
   background-color: rgb(141, 141, 141);
 }
 
 /* When the checkbox is checked, add a blue background */
-.togglebutton_type1 input:checked ~ .checkmark_type1 {
+
+.togglebutton_type1 input:checked~.checkmark_type1 {
   background-color: #2196f3;
 }
 
 /* Create the checkmark/indicator (hidden when not checked) */
+
 .checkmark_type1:after {
   content: "";
   position: absolute;
@@ -291,7 +344,8 @@ body {
 }
 
 /* Show the checkmark when checked */
-.togglebutton_type1 input:checked ~ .checkmark_type1:after {
+
+.togglebutton_type1 input:checked~.checkmark_type1:after {
   display: block;
 }
 
@@ -332,16 +386,19 @@ body {
 }
 
 /* On mouse-over, add a grey background color */
+
 .togglebutton_type2:hover {
   background: rgb(105, 105, 105);
 }
 
 /* When the checkbox is checked, add a blue background */
-.togglebutton_type2 input:checked ~ .checkmark_type2 {
+
+.togglebutton_type2 input:checked~.checkmark_type2 {
   border-left: 12px solid #2195f3a9;
 }
 
 /* Create the checkmark/indicator (hidden when not checked) */
+
 .checkmark_type2:after {
   content: "";
   position: absolute;
@@ -349,29 +406,39 @@ body {
 }
 
 /* Show the checkmark when checked */
-.togglebutton_type2 input:checked ~ .checkmark_type2:after {
+
+.togglebutton_type2 input:checked~.checkmark_type2:after {
   display: block;
 }
 
 /* Tab */
 
 /* Style the tab */
+
 .tab {
   display: flex;
   flex-direction: row;
   overflow: hidden;
   background-color: rgba(24, 24, 24);
   height: 35px;
-  -moz-user-select: none; /* Firefox */
-  -ms-user-select: none; /* Internet Explorer */
-  -khtml-user-select: none; /* KHTML browsers (e.g. Konqueror) */
-  -webkit-user-select: none; /* Chrome, Safari, and Opera */
-  -webkit-touch-callout: none; /* Disable Android and iOS callouts*/
+  -moz-user-select: none;
+  /* Firefox */
+  -ms-user-select: none;
+  /* Internet Explorer */
+  -khtml-user-select: none;
+  /* KHTML browsers (e.g. Konqueror) */
+  -webkit-user-select: none;
+  /* Chrome, Safari, and Opera */
+  -webkit-touch-callout: none;
+  /* Disable Android and iOS callouts*/
 }
+
 .tab:hover {
   overflow: overlay;
 }
+
 /* Style the buttons that are used to open the tab content */
+
 .tab button {
   height: 35px;
   background: rgb(37, 37, 38);
@@ -386,17 +453,20 @@ body {
 }
 
 /* Change background color of buttons on hover */
+
 .tab button:hover {
   background-color: rgb(69, 70, 73);
 }
 
 /* Create an active/current tablink class */
+
 .tab button.active {
   background-color: #2195f37a;
   color: rgb(245, 245, 245);
 }
 
 /* Style the tab content */
+
 .tabcontent {
   display: none;
   padding: 6px 12px;
@@ -406,6 +476,7 @@ body {
 }
 
 /* Style the reload button */
+
 .topleft {
   float: left;
   cursor: pointer;
@@ -428,6 +499,7 @@ body {
 }
 
 /* Fade in tabs */
+
 @-webkit-keyframes fadeEffect {
   from {
     opacity: 0;
