--- a/view/Testscripts_generator.html
+++ b/view/Testscripts_generator.html
@@ -23,8 +23,7 @@
                     <div class="selection_row">
                         <div class="dropdownlist" id="filetoload_drd">
                             <div>
-                                <input type="text" placeholder="Input path..." id="excel_path_input" class="dropdown_input"
-                                    onkeyup="filterFunction()">
+                                <input type="text" placeholder="Input path..." id="excel_path_input" class="dropdown_input">
                                     <div class="dropdown_container" id="excel_path_container"  onmouseenter="CheckHover_Dropdowncontainer(true)"  onmouseleave="CheckHover_Dropdowncontainer(false)">                                       
                                     </div>
                             </div>
@@ -45,8 +44,7 @@
                     <div class="selection_row">
                         <div class="dropdownlist" id="genTo_drd">
                             <div>
-                                <input type="text" placeholder="Input path..." id="gento_path_input" class="dropdown_input"
-                                    onkeydown="filterFunction(event)">
+                                <input type="text" placeholder="Input path..." id="gento_path_input" class="dropdown_input">
                                     <div class="dropdown_container" id="gento_path_container"  onmouseenter="CheckHover_Dropdowncontainer(true)"  onmouseleave="CheckHover_Dropdowncontainer(false)">                                       
                                     </div>
                             </div>
