Update and rename Testscripts_generator.html to Main_view.html

--- a/view/Main_view.html
+++ b/view/Main_view.html
@@ -103,7 +103,7 @@
     </div>
     <script src="../prism/prism.js">
     </script>
-    <script type="module" src="Testscripts_generator.js">
+    <script type="module" src="Main_view.js">
     </script>
 </body>
 
