--- a/view/Main_view.html
+++ b/view/Main_view.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <title>TestScript Generator</title>
     <link rel="stylesheet" href="../assets/css/dark_theme.css">
-    <link rel="stylesheet" href="../prism/prism.css">
+    <link rel="stylesheet" href="../prism/prism_dark.css">
 </head>
 
-<body onresize="Resize()" id="body">
+<body onload="Resize()" onresize="Resize()" id="body">
     <div class="body_contain" id="body_contain">
         <div class="Control" id="control">
             <div class="Path_selection">
