--- a/view/About_view.html
+++ b/view/About_view.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="UTF-8" />
+    <title>About</title>
+    <!-- <link rel="stylesheet" href="../assets/css/dark_theme.css"> -->
+  </head>
 
-<head>
-    <meta charset="UTF-8">
-    <title>TestScript Generator</title>
-    <link rel="stylesheet" href="../assets/css/dark_theme.css">
-</head>
+  <body>
+    <pre>
 
-<body>
-    About
-</body>
-
+App name : Testscripts generator
+Author   : DNS
+Version  : 0.0.1
+    </pre>
+  </body>
 </html>
