--- a/view/Main_view.html
+++ b/view/Main_view.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>TestScript Generator</title>
     <link rel="stylesheet" href="../assets/css/dark_theme.css">
-    <link rel="stylesheet" href="../prism/prism.css">
+    <link rel="stylesheet" href="../prism/prism_dark.css">
 </head>
 
 <body onload="Resize()" onresize="Resize()" id="body">
