--- a/view/About_view.html
+++ b/view/About_view.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8" />
-    <title>About</title>
-    <!-- <link rel="stylesheet" href="../assets/css/dark_theme.css"> -->
-  </head>
 
-  <body>
-    <pre>
+<head>
+  <meta charset="UTF-8" />
+  <title>About</title>
+  <!-- <link rel="stylesheet" href="../assets/css/dark_theme.css"> -->
+</head>
+
+<body>
+  <pre>
 
 App name : Testscripts generator
-Author   : DNS
+Author   : D.N.S
 Version  : 0.0.1
     </pre>
-  </body>
+</body>
+
 </html>
