--- a/view/Main_view.html
+++ b/view/Main_view.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
-    <title>TestScript Generator</title>
-    <link rel="stylesheet" href="../assets/css/dark_theme.css">
-    <link rel="stylesheet" href="../prism/prism_dark.css">
+    <title>Testscripts generator</title>
+    <link rel="stylesheet" href="../assets/css/my_style.css">
+    <link rel="stylesheet" href="../prism/prism.css">
 </head>
 
-<body onload="Resize()" onresize="Resize()" id="body">
+<body onresize="Resize()" id="body">
     <div class="body_contain" id="body_contain">
         <div class="Control" id="control">
             <div class="Path_selection">
-                <div class="div_headline">Load</div>
+                <div class="div_headline">LOAD</div>
                 <div class="selection">
                     <div>
                         <label for="filetoload_drd">Choose excel file:</label>
@@ -78,13 +78,19 @@
                         </label>
                     </div>
                 </div>
-                <div class="div_headline">List Test ID</div>
+                <div class="div_headline">LIST TEST ID</div>
                 <div class="List_TestID" id="list_testID">
                 </div>
             </div>
             <div class="button_row"
-                style="grid-template-columns: auto 71px; border-top: 1.5px solid #686868; padding-top: 5px;">
-                <div></div>
+                style="grid-template-columns:37px auto 71px; border-top: 1.5px solid #686868; padding-top: 5px;">
+                <div>
+                    <label class="switch">
+                        <input type="checkbox" id="darkmode_toggle">
+                        <span class="slider round"></span>
+                    </label>
+                </div>
+                <div style="margin-top: 0.124rem">Dark mode</div>
                 <div class="type2_button" id="generate_btn">Generate</div>
             </div>
         </div>
@@ -99,7 +105,7 @@
             </div>
             <div class="row_splitter"></div>
             <div class="log_contain">
-                <div class="div_headline">Output log</div>
+                <div class="div_headline">OUTPUT LOG</div>
                 <pre id="log_tb"></pre>
             </div>
         </div>
